# wraps

./: README.md  libpng.wrap  meson.build  meson_options.txt
subprojects/: ImFileDialog-wrap.wrap  ImGuiColorTextEdit-wrap.wrap  SDL2-wrap.wrap  glm-wrap.wrap  godot-cpp-4.1-wrap.wrap  imgui-node-editor-wrap.wrap  libgphoto2-wrap.wrap  lmdb-wrap.wrap  lua-wrap.wrap  stb-wrap.wrap
subprojects/packagefiles/: 0001-Fix-path-to-imgui-headers.patch  0001-Snap-to-integer-coordinates.patch  0002-Don-t-implement-stb_image-inside-ImFileDialog.patch
subprojects/packagefiles/ImFileDialog/: meson.build
subprojects/packagefiles/ImGuiColorTextEdit/: meson.build
subprojects/packagefiles/glm/: meson.build
subprojects/packagefiles/godot-cpp/: empty.cpp  meson.build
subprojects/packagefiles/imgui/: meson.build
subprojects/packagefiles/imgui-node-editor/: meson.build
subprojects/packagefiles/imgui/examples/: imgui_impl_softraster.cpp  imgui_impl_softraster.h
subprojects/packagefiles/imgui/misc/softraster/: barycentric.h  color.h  defines.h  softraster.h  texture.h  utils.h
subprojects/packagefiles/libfive/: meson.build
subprojects/packagefiles/libfive/libfive/: meson.build
subprojects/packagefiles/libgphoto2/: meson.build  meson_options.txt
subprojects/packagefiles/libgphoto2/lib/: meson.build
subprojects/packagefiles/libpng/: meson.build
subprojects/packagefiles/llvm/: meson.build  meson_options.txt
subprojects/packagefiles/lmdb/: meson.build
subprojects/packagefiles/lua/: meson.build
subprojects/packagefiles/lua/src/: meson.build
subprojects/packagefiles/stb/: meson.build
