project(
	'stb',
	'c',
)

stb_subprj = subproject('stb-wrap')
stb_c_lexer_dep = stb_subprj.get_variable('stb_c_lexer_dep')
stb_divide_dep = stb_subprj.get_variable('stb_divide_dep')
stb_dxt_dep = stb_subprj.get_variable('stb_dxt_dep')
stb_easy_font_dep = stb_subprj.get_variable('stb_easy_font_dep')
stb_herringbone_wang_tile_dep = stb_subprj.get_variable('stb_herringbone_wang_tile_dep')
stb_hexwave_dep = stb_subprj.get_variable('stb_hexwave_dep')
stb_image_resize_dep = stb_subprj.get_variable('stb_image_resize_dep')
stb_image_write_dep = stb_subprj.get_variable('stb_image_write_dep')
stb_image_dep = stb_subprj.get_variable('stb_image_dep')
stb_include_dep = stb_subprj.get_variable('stb_include_dep')
stb_perlin_dep = stb_subprj.get_variable('stb_perlin_dep')
stb_rect_pack_dep = stb_subprj.get_variable('stb_rect_pack_dep')
stb_sprintf_dep = stb_subprj.get_variable('stb_sprintf_dep')
stb_truetype_dep = stb_subprj.get_variable('stb_truetype_dep')
stb_dep = stb_subprj.get_variable('stb_dep')
