project(
	'imgui',
	'cpp',
)

imgui_dep = subproject('imgui-wrap').get_variable('imgui_dep')

imgui_node_editor_dep = subproject('imgui-node-editor-wrap').get_variable('imgui_node_editor_dep')

imgui_color_text_edit_dep = subproject('ImGuiColorTextEdit-wrap').get_variable('imgui_color_text_edit_dep')
