project(
	'imgui',
	'cpp',
)

imgui_dep = subproject('imgui-wrap').get_variable('imgui_dep')

imgui_node_editor_dep = subproject('imgui-node-editor-wrap').get_variable('imgui_node_editor_dep')

imgui_color_text_edit_dep = subproject('ImGuiColorTextEdit-wrap').get_variable('imgui_color_text_edit_dep')

im_file_dialog_dep = subproject('ImFileDialog-wrap').get_variable('im_file_dialog_dep')
